# SampleName

./: .gitignore  CMakeLists.txt  comp-shaders.bat  make.bat
inc/: algebra.h  animation.h  basicvertex.h  com.h  input.h  levels.h  main.h  objects.h  render.h  worldsim.h
inc/debug/: memtrack.h  rdebug.h
inc/game/: aircraft.h
inc/render/: camera.h  render.h  render2D.h  rendercom.h  renderer.h
resources/models/: jet-blend.stl  jet-test.stl  terrain.stl
resources/shaders/comp/DXIL/: ascii2D.frag.dxil  ascii2D.vert.dxil  asciiLayers.vert.dxil  box.vert.dxil  debug3D.vert.dxil  debugVec.vert.dxil  odyssey.frag.dxil  odyssey.vert.dxil  test3D.vert.dxil
resources/shaders/comp/MSL/: ascii2D.frag.msl  ascii2D.vert.msl  asciiLayers.vert.msl  box.frag.msl  box.vert.msl  debug3D.vert.msl  debugVec.vert.msl  odyssey.frag.msl  odyssey.vert.msl  test3D.vert.msl
resources/shaders/comp/SPV/: ascii2D.frag.spv  ascii2D.vert.spv  asciiLayers.vert.spv  box.vert.spv  (+5 more)
resources/shaders/src/: ascii2D.frag.hlsl  ascii2D.vert.hlsl  asciiLayers.vert.hlsl  box.frag.hlsl  box.vert.hlsl  debug3D.vert.hlsl  debugVec.vert.hlsl  odyssey.frag.hlsl  odyssey.vert.hlsl  test3D.frag.hlsl  test3D.vert.hlsl
src/: algebra.c  animation.c  basicvertex.c  com.c  input.c  main.c  objects.c  render.c  worldsim.c
src/debug/: memtrack.c  rdebug.c
src/game/: aircraft.c
src/levels/: lvl_air.c  lvl_bird.c  lvl_mario.c  lvl_odyssey.c
src/render/: camera.c  render.c  render2D.c  render_utils.c  rendercom.c  renderer.c  renderer2D.c  rendererinstanced.c  renderertest.c  renderertex.c
